new commit, started with the introduction, added more references to .bib file

--- a/9monthReport.tex
+++ b/9monthReport.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,12pt,twoside]{report}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=3cm]{geometry}
 \usepackage{natbib}
+\bibliographystyle{apalike}
 
 \include{thesis.preamble}
 
@@ -34,7 +35,6 @@
 
 
 \addcontentsline{toc}{chapter}{Bibliography}
-\bibliographystyle{alpha}
 \bibliography{bibliography/bibliography}
 
 \end{document}
