--- a/icthesis.sty
+++ b/icthesis.sty
@@ -23,9 +23,9 @@
   {\Large \@author}
   \vskip 4in
   \par
-  Submitted in compliance with the requirements of a Research PhD programme
+  Submitted in compliance with the requirements of a Research PhD programme,
   \linebreak
-  from Imperial College London, \@submitdate 
+  Imperial College London, \@submitdate 
   \vfil
   \end{titlepage}
 }
