--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -3,7 +3,7 @@
 
 \section{Motivation and Objectives}
 
-Motivation and Objectives here.
+It has been established via airborne magnetic surveys in the U.S.A. \citep{Donovan} that magnetic contrasts---that is, ``magnetisation that is different from background magnetisation and which may give rise to mappable magnetic anomalies detectable by conventional magnetometry" \citep{Machel}---are a common feature of hydrocarbon reservoir sites. \citet{Donovan} suggested that these magnetic anomalies are caused by near-surface magnetic minerals induced by seepage from the underlying hydrocarbon reservoir. \citet{Diaz} and \citet{Liu} have confirmed the existence of iron-bearing minerals near the surface in oil fields in China and Venezuela by analysing samples collected from near-surface soils. These investigations confirm the original hypothesis of \citet{Donovan} that the reducing environment caused by the upward seepage from the reservoirs is conducive to the formation of magnetic minerals---such as magnetite and other Fe-oxides, and greigite and other Fe-sulphides---and/or the destruction of minerals such as hematite \citep{Machel}.
 
 
 
