another boring commit

--- a/background/background.tex
+++ b/background/background.tex
@@ -3,6 +3,9 @@
 
 \label{ch:background}
 
-\section{Introduction}
+\section{Magnetism and matter}
 
-Text of the Background.
+\subsection{Fundamentals of magnetism}
+
+The description of magnetic fields is analogue to that of electrical fields. Although, unlike the situation in electricity, there are no magnetic charges, only magnetic dipoles. A more thorough analysis reveals the origin of magnetism is electrical: a circular electrical current (either a flow of electrons or a single electron) produces an \textit{induction} field $\vec{B}$. As such, the SI magnetic units are represented by electrical and mechanical units. Thus, on a fundamental level it is correct to understand magnetism as an electrical phenomenon.\par
+
