--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -170,7 +170,7 @@ year = "1993",
 month = "September",
 }
 
-@phdthesis{Chang,
+@phdthesis{ChangTh,
 author = "Liao Chang",
 title = "Fundamental magnetic properties of {G}reigite ($\text{Fe}_{3}\text{S}_4$)",
 school = "University of Southampton",
@@ -268,4 +268,43 @@ journal = "Stud. Geophys. Geod.",
 volume = "55",
 pages = "359--376",
 year = "2011",
+}
+
+@article{Donovan2,
+author = "Terrence J. Donovan and John D. Hendricks and Alan A. Roberts and Patricia Termain Eliason",
+title = "Low-altitude aeromagnetic reconaissance for petroleum in the {A}rctic {N}ational {W}ildlife {R}efuge, {A}laska",
+journal = "Geophysics",
+volume = "49",
+number = "8",
+pages = "1338--1353",
+year = "1984",
+}
+
+@article{Chang,
+author = "Liao Chang and Andrew P. Roberts and Yan Tang and Brian D. Rainford and Adrian R. Muxworthy",
+title = "Fundamental magnetic parameters from pure synthetic greigite ($\text{Fe}_3 \text{S}_4$)",
+journal = "J. Geophys. Res.",
+volume = "113",
+number = "B06104",
+year = "2008",
+}
+
+@article{Liu2,
+author = "Qingsheng Liu and Lungsang Chan and Qingsong Liu and Haixia Li and Fang Wang and Shuangxi Zhang and Xianghua Xia and Tongjin Cheng",
+title = "A study of relationship between magnetic, geochemical and mineralogical anomalies and hydrocarbon microseepage above oil and gas fields, {O}rdos {B}asin in {C}hina",
+journal = "AAPG Bull.",
+volume = "88",
+number = "2",
+pages = "241--251",
+year = "2004",
+}
+
+@article{Liu3,
+author = "Qingsheng Liu and Shugen Liu",
+title = "Magnetic and mineralogical characteristics of reservoir rocks in the {Y}akela oil field, northern {T}arim {B}asin and their implications for magnetic detection of oil and gas accumulations",
+journal = "Chin. Sci. Bull.",
+volume = "4",
+number = "2",
+pages = "174--177",
+year = "1999",
 }
