a veeery exciting commit :D

--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -3,6 +3,6 @@
 
 \begin{abstract}
 
-It is known from aeromagnetic surveys from Venezuela, China and the U.S. that it is common to find magnetic anomalies over oil fields. It has been suggested that hydrocarbon reservoirs, through upward seepage, create physical and geochemical conditions in soils sitting above them that are conducive to the formation of ferrimagnetic minerals such as magnetite and greigite. From near-surface samples drilled in Venezuela it has been observed that these minerals form aggregates of roughly spherical grains called \textit{framboids}. While the specific physical and geochemical processes involved in the genesis of these minerals is an active research topic, I will focus in studying the domain structure and hysteresis parameters of these minerals via numerical simulation of the \textit{micromagnetic} equations. Solving the micromagnetic problem can be done either by minimising the total Gibbs free energy which is a sum of energies associated with different phenomena in a ferromagnetic material or by solving the dynamical equation for the magnetic moments, that is, the Landau-Lifshitz-Gilbert equation (LLGE). I will use a finite element method based on the general-purpose package collection for automated solutions of partial differential equations \textit{FEniCS} to solve the LLGE as well as an energy minimising routine, specifically a conjugate gradient method. My aim is to find the magnetic signal of these mineral aggregates measured in a given sample by standard rock-magnetic and palaeomagnetic techniques. As a first approach to the problem, before scaling up the simulations, I have conducted simulations of hysteresis loops and zero-field domain structure of octahedral-shaped single grains of greigite and compared these with octahedral grains whose corners have been chopped. These shapes are typical morphologies of greigite and so, these simulations constitute an improvement over previous finite difference models that could only study somewhat unrealistic shapes like cubes and rectangular prisms.
+It is known from aeromagnetic surveys from Venezuela, China and the U.S.A. that it is common to find geomagnetic anomalies over oil fields. It has been suggested that hydrocarbon reservoirs, through upward seepage, create physical and geochemical conditions in soils and rocks sitting above them that are conducive to the formation of secondary ferrimagnetic minerals such as magnetite and greigite. In near-surface samples drilled in Venezuela it has been observed that these minerals form aggregates of roughly spherical grains called \textit{framboids}. While the specific physical and geochemical processes involved in the genesis of these minerals is an active research topic, I will focus in studying the domain structure and hysteresis parameters of these minerals via numerical simulation of the \textit{micromagnetic} equations. Solving the micromagnetic problem can be done either by minimising the total Gibbs free energy which is a sum of energies associated with different phenomena in a ferromagnetic material or by solving the dynamical equation for the magnetic moments, that is, the Landau-Lifshitz-Gilbert equation (LLGE). I will use a finite element method based on the general-purpose package collection for automated solutions of partial differential equations \textit{FEniCS} to solve the LLGE as well as an energy minimising routine, specifically a conjugate gradient method. My aim is to find the magnetic response of these mineral aggregates measured in a given sample by standard rock-magnetic and palaeomagnetic techniques. As a first approach to the problem, before scaling up the simulations, I have conducted simulations of hysteresis loops and zero-field domain structure of octahedral-shaped single grains of greigite and compared these with octahedral grains whose corners have been chopped. These shapes are typical morphologies of greigite and so, these simulations constitute an improvement over previous finite difference models that could only study somewhat unrealistic shapes like cubes and rectangular prisms.
 
 \end{abstract}
